--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   
 }
-
+/*
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -14,7 +14,7 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+*/
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
